# learning-cmake

boost/: CMakeLists.txt
curl/: CMakeLists.txt
curl/src/: CMakeLists.txt
hello-world/: CMakeLists.txt
hello-world-clear/: CMakeLists.txt
hello-world-clear/src/: CMakeLists.txt
hello-world-lib/: CMakeLists.txt
hello-world-lib/src/: CMakeLists.txt
